/set_session should return { status: success }

--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -21,6 +21,7 @@
         <div class="chat-footer">
             <input type="text" id="user-input" placeholder="Type your message here...">
             <button id="send-btn">Send</button>
+            <button id="clear-btn">Clear</button>
         </div>
     </div>
 
